<resources>
    <string name="app_name">Calculator</string>
    <string name="input_one">Input Number #1</string>
    <string name="input_two">Input Number #2</string>

    <string name="minus">Minus</string>
    <string name="plus">Plus</string>
    <string name="mult">Mult</string>
    <string name="divide">Divide</string>

    <string name="answer">Answer</string>
    <string name="Answer">Answer</string>


</resources>